# wibe

./: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CITATION.bib  CITATION.cff  README-actual-RU.md  README.md  README.rst  csv_to_datalens.py  download_models.py  dwtsvm_requrements.txt  huggingface_login.py  install_requirements.py  install_requirements.sh  make_plots.py  prepare.sh  pyproject.toml  req.py  requirements.txt  setup.cfg
attack_resources/: flux_prompts.json
configs/: arwgan.yml  chunkyseal.yml  cin.yml  cin_msu.yml  dct.yml  demo.yml  dft_circle.yml  distortions.yml  dwsf.yml  dwt_svm.yml  fin.yml  gaussian_shading.yml  hidden.yml  invisible_watermark.yml  invisible_watermark_demo.yml  invisible_watermark_msu.yml  invismark.yml  maskwm.yml  maxsive.yml  mbrs.yml  metr.yml  pimog.yml  pixelseal.yml  ringid.yml  robust_wide.yml  sepmark.yml  sshidden.yml  ssl_watermarking_0bit.yml  ssl_watermarking_multibit.yml  ssl_watermarking_multibit_msu.yml  stable_signature.yml  stable_signature_msu.yml  stega_stamp.yml  stega_stamp_demo.yml  stega_stamp_msu.yml  treering.yml  treering_embed_extract.yml  treering_post_embed_metrics.yml  trustmark.yml  trustmark_demo.yml  (+10 more)
configs/common/: datasets_lim.yml  diffusiondb.yml  diffusiondb_prompts.yml  metrics.yml  mscoco.yml  mscoco_prompts.yml  post_attack_metrics.yml  post_embed_metrics.yml  post_extract_metrics.yml  resourceintensive_attacks.yml  tpr_fpr.yml
configs/jpeg_q/: p1.yaml  p10.yaml  p11.yaml  p12.yaml  p13.yaml  p14.yaml  p15.yaml  p16.yaml  p17.yaml  p18.yaml  p19.yaml  p2.yaml  p20.yaml  p3.yaml  p4.yaml  p5.yaml  p6.yaml  p7.yaml  p8.yaml  p9.yaml
configs/jpeg_q/mycommon/: attack_list.yml  datasets_lim.yml  diffusiondb.yml  jpeg_vars.yml  post_embed_metrics.yml
db_configs/: dct_wm.ini  dft_circle.ini  invisible_watermark.ini
docs/: install_requirements.sh
docs/source/: algorithms.rst  attacks.rst  code_structure.rst  conf.py  datasets.rst  index.rst  metrics.rst  overview.rst  pipeline.rst  quick_start.rst  requirements.txt  results.rst  results.rst.txt  setup.rst  system_requirements.rst
im_test/: algorithm_wrapper.py  augmentations.py  datasets.py  main.py  metrics.py  pipeline.py
im_test/algorithms/: dct_marker.py  dft_circle.py  dwtsvm_marker.py
imgmarkbench/: cli.py  metrics.py  pipeline.py  registry.py
imgmarkbench/algorithms/: base.py
md_docs/: algorithm.md  attack.md  config.md  dataset.md  metric.md
notebooks/: download_diffusiondb.ipynb
requirements/algorithms/: cin.txt  dwsf.txt  dwt_dct.txt  dwt_svm.txt  fin.txt  gaussian_shading.txt  invismark.txt  maskwm.txt  maxsive.txt  metr.txt  pimog.txt  ringid.txt  sshidden.txt  ssl_watermarking.txt  stable_signature.txt  syncseal.txt  vine.txt  watermark_anything.txt
requirements/attacks/: SADRE.txt  VAERegeneration.txt  adversarialembeddingpsnr.txt  diffusion_regeneration.txt  discoattack.txt  fluxregeneration.txt  fluxrinsing.txt  imageeditinginstructpix2pix  imageeditinginstructpix2pix.txt  latentfrequencymasking.txt  semanticimprintremoval.txt  trustmarkrm.txt  wmforger.txt
requirements/datasets/: diffusiondb.txt
requirements/metrics/: blip.txt  clip_iqa.txt  clipscore.txt  dreamsim.txt  imagereward.txt
resources/: prompts_internvl.json
resources/averaging/: pattern_stable_sig.pth  pattern_stegastamp.pth  pattern_treering.pth
resources/videoseal/: chunkyseal.yaml  pixelseal.yaml  videoseal_1.0.yaml
scripts/: dwsf.ini  test_dct_wm.py  test_dft_circle.py  test_dwsf.py  test_dwtsvm.py  test_invisible_watermark.py
src/imgmarkbench/: __main__.py  aggregator.py  cli.py  config.py  config_loader.py  context.py  module_importer.py  pipeline.py  registry.py  typing.py  utils.py
src/imgmarkbench/algorithms/: base.py  test_dct_wm.py  test_dft_circle.py  test_dwsf.py  test_dwtsvm.py  test_invisible_watermark.py
src/imgmarkbench/algorithms/arwgan/: arwgan.py  requirements.txt  wrapper.py
src/imgmarkbench/algorithms/cin/: __init__.py  requirements.txt  wrapper.py
src/imgmarkbench/algorithms/dct_marker/: wrapper.py
src/imgmarkbench/algorithms/dft_circle/: dft_circle.py  wrapper.py
src/imgmarkbench/attacks/: __init__.py  base.py  distortions.py
src/imgmarkbench/augmentations/: base.py
src/imgmarkbench/datasets/: base.py
src/imgmarkbench/metrics/: base.py
src/imgmarkbench_watermarking_algorithms/: dwsf_alg.py
src/imgmarkbench_watermarking_algorithms/dwt_svm/: __init__.py  requirements.txt
src/wibench/: __main__.py  aggregator.py  base_objects.py  cli.py  config.py  config_loader.py  context.py  download.py  module_importer.py  pipeline.py  pipeline_type.py  progress.py  registry.py  requirements.py  settings.py  typing.py  utils.py  watermark_data.py
src/wibench/algorithms/: __init__.py  base.py
src/wibench/attacks/: __init__.py  base.py  common.py  distortions.py
src/wibench/attacks/nrp/: nrp.py  (+1 more)
src/wibench/datasets/: __init__.py  base.py  typing.py
src/wibench/metrics/: __init__.py  base.py
test_results/diffusiondb_filtered__dft600/: meta.json
test_results/diffusiondb_filtered__dft600/jsons/: 0.png.json
tests/: test_dry_run.py
user_plugins/: README.md  invismark.py  invismark_reqs.txt  mbrs.py
venvs/: venv0.txt  venv1.txt  venv2.txt
(+251 files in other folders)
