[metadata]
name = wibench
description =
author =  Ivannikov Institute for System Programming of the RAS
url = 

[flake8]
inline-quotes = double
ignore = E203, W503

[mypy]
# mypy configurations: http://bit.ly/2zEl9WI
allow_redefinition = False
check_untyped_defs = True
disallow_any_explicit = True
disallow_any_generics = True
disallow_untyped_calls = True
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
local_partial_types = True
strict_optional = True
strict_equality = True
no_implicit_optional = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir = 
    =src
install_requires =
    typer
    numpy>= 1.24.4
    scikit-image>= 0.21.0
    scipy
    tqdm
    torch
    pandas
    jinja2
    PyYaml
    pydantic


[options.packages.find]
where=src

[options.extras_require]
dev =
    # These requirements are for development and testing only, not for production.
    pytest
    pytest-cov
    flake8
    flake8-commas 
    flake8-continuation 
    pep8-naming
    flake8-expression-complexity
    flake8-quotes
    black
    mypy
